tests/transpiler/x/clj/var_assignment.clj
;; Generated by Mochi transpiler on 2025-07-19T06:44:57Z
(ns main)
(def x 1)
(defn -main [] (set! x 2) (println x))
(-main)
